Fix sticky nav in Safari and fixed nav on mobile

--- a/themes/grain/source/css/style.css
+++ b/themes/grain/source/css/style.css
@@ -179,6 +179,7 @@ code {
 .sidebar {
   min-width: 18rem;
   padding: 3rem 1.5rem;
+  position: -webkit-sticky;
   position: sticky;
   top: 88px;
   height: calc(100vh - 88px);
@@ -242,7 +243,7 @@ code {
 
 
 #sidebar-mobile {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 88px;
   display: none;
